synchronised version number with other components

--- a/ant/build.properties
+++ b/ant/build.properties
@@ -5,7 +5,7 @@
 #
 
 proj.name=TSPHP-grammar-convention
-proj.version=0.0.1
+proj.version=0.5.6.x
 proj.startclass=
 proj.autor=Robert Stoll <rstoll@tutteli.ch>
 
